--- a/06-log_replication.tex
+++ b/06-log_replication.tex
@@ -61,14 +61,11 @@ All situations of inconsistencies are handled by forcing the followers to duplic
 
 The log and heartbeat are two implementation specific parts of the Raft algorithm that is not described in implementation details.
 
-Normally the log should be persistent meaning that it should be persisted to disk such that a failure would not result in data loss. But since the implementation in this project is only for visualization, persistency is not implemented. The log is implemented as an object \verb$Log$ that works as an abstraction on top of a simple array containing the entries. For a programmer this abstraction is important since Raft is documented and specified as being a 1-indexed system, where most databases and arrays in various programming languages are 0-indexed.
+Normally the log should be persistent, but since the implementation in this project is only for visualization, persistency is not implemented. The log is implemented as an object \verb$Log$ that works as an abstraction on top of a simple array containing the entries. For a programmer this abstraction is important since Raft is documented and specified as being a 1-indexed system, where most databases and arrays in various programming languages are 0-indexed.
 
+Besides replicating its log, the leader also need to keep state of the progress of the follower's logs. More precisely it need to know the next empty index of a given follower's log and the index of largest log entry that matches in the leader log. In our implementation this state is kept in the \verb$LeaderState$ object that is initialized (or reset) when a new leader is elected.
 
-
-% Components
-%   - The Log (store in array, abstracts the 1-indexing in Raft)
-%   - LeaderState (the state the leader keeps about the followers)
-%   - The Heartbeat ()
+The heartbeat is implemented and used by the leader as an independent mechanism that sends an AppendEntriesRPC every $t$ milliseconds using the JavaScript function \verb$setInterval$. Alternatively the heartbeat could be dependent on the response of the follower by sending a heartbeat $i$ seconds after the leader got a response. But this would introduce extra complexity as we would need to handle the case where the follower is down.
 
 % subsection implementation (end)
 
