--- a/report.tex
+++ b/report.tex
@@ -7,6 +7,7 @@
 
 \usepackage[dvipsnames]{xcolor}
 \usepackage{fancyvrb}
+\usepackage{spverbatim}
 
 % redefine \VerbatimInput
 \RecustomVerbatimCommand{\VerbatimInput}{VerbatimInput}%
