Updates from ShareLaTeX

--- a/01-introduction.tex
+++ b/01-introduction.tex
@@ -3,7 +3,7 @@
 \section{Introduction} % (fold)
 \label{sec:introduction}
 
-This the final report for a project in the course ``Fault tolerant systems'' 02228. The purpose of this report is to document our experience implementing a consensus algorithm i.e. Raft. \\
+This the final report for a project in the course ``Fault tolerant systems'' 02228. The purpose of this report is to document our experience implementing a consensus algorithm i.e. Raft. Our approach to this is to take the basic description of Raft and iteratively construct a test for each behaviour the algorithm should have and implement its functionality that satisfies the given test.\\
 
 The fundamental problem, when talking about consensus in a distributed system, will be presented at start. This will then show the motivation behind the project itself. And, as many solutions to this problem already exists, it should also be discussed why Raft in particular is relevant in the context of this project.
 
