--- a/report.tex
+++ b/report.tex
@@ -170,8 +170,9 @@
 \include{05-leader_election}
 \include{06-log_replication}
 \include{07-evaluation_testing}
-\include{08-discussion}
-\include{09-conclusion}
+\include{08-results}
+\include{09-discussion}
+\include{10-conclusion}
 
 \bibliography{references}{}
 \bibliographystyle{plain}
